Changed URI for docker container

--- a/proxy-gateway.properties
+++ b/proxy-gateway.properties
@@ -12,5 +12,5 @@ spring.cloud.gateway.globalcors.cors-configurations[/**].maxAge=3600
 
 # Routing:
 spring.cloud.gateway.routes[0].id=todolist-service
-spring.cloud.gateway.routes[0].uri=http://localhost:8001
+spring.cloud.gateway.routes[0].uri=http://todolist-service:8001
 spring.cloud.gateway.routes[0].predicates[0]=Path=/todolists/**
